--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
     background-color: #fff;
     position: relative;
     border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
 }
 
 .card-container,
@@ -64,6 +68,7 @@ body {
     padding: 10px 15px;
     border-bottom: 1px solid #0fbeab;
 }
+
 .card-header__icon {
     width: 60px;
     height: 60px;
@@ -104,8 +109,102 @@ body {
     text-transform: capitalize;
 }
 
+.card-footer {
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid lightgrey;
+}
+
+.add__button {
+    height: 50px;
+    width: 50px;
+    background-color: #fff;
+    font-size: 50px;
+    font-weight: 700;
+    border: 2px solid #0aa393;
+    border-radius: 50%;
+    position: relative;
+    cursor: pointer;
+}
+
+.add__button span {
+    color: #11cbb8;
+    position: absolute;
+    top: -10px;
+    left: 7px;
+}
+
 .add-task-modal {
     display: none;
+    width: calc(100% - 30px);
+    height: 160px;
+    background-color: #0aa393;
+    border: 1px solid #0aa393;
+    border-radius: 4px;
+    padding: 30px;
+    margin: 0 15px;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    box-shadow: 0px 4px 5px 3px rgba(98,107,112,0.25);
+    z-index: 2;
+}
+
+.add-task-modal__label {
+    color: #eee;
+    opacity: 0.8;
+    font-size: 12px;
+    text-align: left;
+    display: block;
+    margin: 5px 0;
+}
+
+.add-task-modal__content {
+    background-color: #0aa393;
+    border: 1px solid rgba(238, 238, 238, 0.8);
+    padding: 6px;
+    color: #eee;
+    opacity: 0.8;
+    width: 100%;
+    font-size: 12px;
+    font-weight: 300;
+    text-align: left;
+    display: block;
+    margin: 5px 0;
+}
+
+.add-task-modal__content::placeholder {
+    color: #eee;
+    font-size: 12px;
+    font-weight: 300;
+    text-align: left;
+}
+
+.add-task-modal__button {
+    border: 1px solid #eee;
+    font-size: 14px;
+    font-weight: 300;
+    border-radius: 25px;
+    height: 30px;
+    width: 100px;
+    background-color: #0aa393;
+    color: #eee;
+    margin: 15px 0 0 0;
+}
+
+.transparent-layer {
+    display: none;
+    background-color: rgba(238, 238, 238, 0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 .--active {
